# Jarvis

./: .env.example  .gitignore  README.md  SETUP_CHECKLIST.md  TAVILY_SETUP.md  calendar_credentials.json  config.py  graph.py  llm.py  main.py  pyproject.toml  run_backend.sh  run_frontend.sh  run_jarvis.sh  server.py  setup_calendar.py  setup_my_memory.py  test_add_and_search.py  test_client.html  test_memory_persistence.py  tool_config.py
docs/: AGENT_LOOP_CONTROL.md  LANGSMITH_SETUP.md
examples/: memory_example.py
frontend/: app.py
frontend-next/: README.md  package-lock.json  package.json  tailwind.config.ts
frontend-next/app/: globals.css  layout.tsx  page.tsx
frontend-next/components/: ChatInput.tsx  ChatMessage.tsx  CoreMemoryPanel.tsx  ProcessingStatus.tsx  Sidebar.tsx  ToolConfigPanel.tsx
frontend-next/hooks/: useCoreMemory.ts  useSpeechRecognition.ts  useSpeechSynthesis.ts  useWebSocket.ts
memory/: core_memory.py
prompts/: gmail_handler_prompt.py  main_agent_prompt.py  nutrition_handler_prompt.py  sample_prompt.py  workout_handler_prompt.py
subgraphs/: gmail_handler.py  nutrition_handler.py  workout_handler.py
tools/: calendar_tools.py  gmail_tools.py  tools.py
