[project]
name = "jarvis"
version = "0.1.0"
description = "Personal AI assistant using LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "openpyxl>=3.1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "websockets>=13.0",
    "mem0ai>=0.1.0",
    "streamlit>=1.40.0",
    "python-dotenv>=1.0.0",
    "langsmith>=0.2.0",
    "langchain-community>=0.3.31",
]
